--- a/src/Universal.css
+++ b/src/Universal.css
@@ -41,6 +41,7 @@ input[type=number], select {
     border-radius: 5px;
     background-color: #f2f2f2;
     padding: 5px;
+    
   }
   
   a {
@@ -66,4 +67,9 @@ input[type=number], select {
   .bold {
     font-weight: 700;
     color: #f01f1f;
+  }
+
+  .main-home {
+    width: 40%; 
+  
   }
