--- a/src/Universal.css
+++ b/src/Universal.css
@@ -58,7 +58,7 @@ input[type=number], select {
   .frame {
     border-style: solid;
     border-width: 1.5px;
-    padding: 20px;
+    padding: 15px;
     border-color: rgb(203, 203, 203);
     margin-top: 15px;
   }
@@ -71,4 +71,8 @@ input[type=number], select {
   .main-home {
     width: 40%; 
   
+  }
+
+  h3 {
+    font-size: 1.5rem;
   }
