--- a/src/Universal.css
+++ b/src/Universal.css
@@ -1,5 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=DM+Sans:ital,wght@0,400;0,500;0,700;1,700&display=swap');
 
+* {
+  font-family: 'DM Sans', sans-serif;
+
+}
+
 body {
     font-family: 'DM Sans', sans-serif;
     margin: 0;
@@ -75,4 +80,13 @@ input[type=number], select {
 
   h3 {
     font-size: 1.5rem;
+  }
+
+  .note {
+    background-color: #f01f1f;
+    margin: 0;
+    text-align: center;
+    color: rgb(238, 238, 238);
+    display: inline-block;
+    padding-top: 1rem;
   }
